# MineShield

./: .gitignore  FIXME.md  GAiLO的所有pip包.txt  MineShield.code-workspace  README.md  main.py  pyproject.toml  requirements.txt
backup/: dataMining.py  mainWindow.py
res/data/: sample1.csv
res/data/# News/: data1.csv  data10.csv  data15.csv  data16.csv  data19.csv  data2.csv  data21.csv  data23.csv  data25.csv  data26.csv  data27.csv  data28.csv  data29.csv  data3.csv  data31.csv  data33.csv  data7.csv  data9.csv
res/data/4 Isolation_Forest/: train_dataset.csv
res/data/5 Apriori/: vegetable_transactions.csv
res/data/8 Agglomerative_Clustering/: ac_test.csv
res/data/Apriori/: network_traffic_pca.csv
res/data/C SVM-Email/: sample2.eml
res/data/D KNN-Packet/: example.csv
res/data/Dimensionality_Reduction/: 1.py
res/data/I SVM-SQL/: injec_.csv  pass_.csv
res/data/Isolation/: test.csv
res/data/J LSTM-XSS/: XSS_dataset.csv
res/data/K-means/: data11.csv  data12.csv  data13.csv  data14.csv  data17.csv  data18.csv  data20.csv  data22.csv  data24.csv  data30.csv  data32.csv  data34.csv  data35.csv  data4.csv  data5.csv  data6.csv  data8.csv
res/model/: One-Class_SVM_model.pkl  agglomerative_attack_detection_model.pkl  ddos_gbdt_model.pkl  gmm_attack_detection_model.pkl  gmm_scaler.pkl  isolation_model.pkl  keras_mlp_model_trained.keras  labelencoder.pkl  lg-urldetect.pkl  mlp_model_trained.pkl  onehot_encoder.pkl  scaler-mlp.pkl  scaler.pkl  vectorizer-LOG.pkl  vectorizer-SVM.pkl  vectorizer.pkl  xgboost_model.pkl
src/: QList.qss  QSSLoader.py  alorgorithmDialog.py  attackDetection.bak.py  attackDetection.py  attackDetection_1.py  dataMining.py  main.py  mainWindow.py  mainWindow_1.py  mainWindow_2.py
src/algorithms/: Apriori.py  DDOS.py  Decision_Tree.py  Dimensionality_Reduction.py  GMM.py  Isolation-forest.py  Isolation_Forest.py  KNN.py  Linear_Regression.py  Logistics-Regression.py  One_Class_SVM.py  PCA.py  Random_forest.py  Random_forest.py.bak  Random_forest.py.gpt.bak  SVM.py  XGBoost.py  __init__.py  mlp.py
src/pages/: CLImode.py  CLImodeInput.py  __init__.py
src/widget/: FluentListWidget.py  IconButton.py  MicaWindow.py  RoundComboBox.py  RoundWidget.py  TabButton.py
style/: QLable.qss  QLineEdit.qss  QList.qss  QPushButton.qss  QTableWidget.qss  QTextEdit.qss  TabButtom.qss  main.qss
(+51 files in other folders)
