[project]
name = "mineshield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chardet>=5.2.0",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "mlxtend>=0.23.4",
    "networkx>=3.4.2",
    "nltk~=3.9.1",
    "pandas>=2.2.3",
    "pyqt5>=5.15",
    "pyqt5-tools>=5.15.9.3.3",
    "pywin32>=310",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.7",
    "urlextract>=1.9.0",
    "win32mica>=3.0",
    "absl-py==2.2.2",
    "astunparse==1.6.3",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "flatbuffers==25.2.10",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.71.0",
    "h5py==3.13.0",
    "keras==3.9.2",
    "libclang==18.1.1",
    "markdown==3.8",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.1",
    "namex==0.0.9",
    "opt-einsum==3.4.0",
    "optree==0.15.0",
    "protobuf==5.29.4",
    "pygments==2.19.1",
    "requests==2.32.3",
    "rich==14.0.0",
    "setuptools==80.3.0",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.19.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "termcolor==3.1.0",
    "typing-extensions==4.13.2",
    "urllib3==2.4.0",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.2",
]
